--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,10 @@
 # Maven
+- task: CmdLine@2
+  inputs:
+    script: |
+      cd WebGoat
+      git checkout develop
+      mvn clean install
 # Build your Java project and run tests with Apache Maven.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
