--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,7 @@
 # Build your Java project and run tests with Apache Maven.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
+
 trigger:
 - develop
 
@@ -23,13 +24,5 @@ steps:
     jdkVersionOption: '1.8'
     jdkArchitectureOption: 'x64'
     publishJUnitResults: true
-    testResultsFiles:'**/TEST-*.xml'
-- task: PowerShell@2
-  inputs:
-    targetType: 'inline'
-    script: |
-      git clone git@github.com:yashwanthgk88/WebGoat
-      cd WebGoat
-      git checkout develop
-      mvn clean install
+    testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
