--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,20 +1,8 @@
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
-    options: 'mvn -pl webgoat-server spring-boot:run'
-    publishJUnitResults: true
-    testResultsFiles: '**/TEST-*.xml'
-    javaHomeOption: 'JDKVersion'
-    mavenVersionOption: 'Default'
-    mavenAuthenticateFeed: false
-    effectivePomSkip: false
-    sonarQubeRunAnalysis: false
-- task: Maven@1
-  inputs:
-    mavenPomFile: 'pom.xml'
-    options: 'mvn -pl webgoat-server spring-boot:run'
-    publishJUnitResults: true
-    testResultsFiles: '**/surefire-reports/TEST-*.xml'
+    options: '-pl webgoat-server spring-boot:run'
+    publishJUnitResults: false
     javaHomeOption: 'JDKVersion'
     mavenVersionOption: 'Default'
     mavenAuthenticateFeed: false
